--- a/cycletrack/app/src/main/res/layout/activity_main.xml
+++ b/cycletrack/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,13 @@
         android:textOff="@string/start_tracking"
         android:textOn="@string/stop_tracking"
         android:onClick="toggleTracking" />
+
+    <TextView
+        android:id="@+id/trackingStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="85dp"
+        android:text="@string/not_tracking" />
 </RelativeLayout>
